--- a/myapp/templates/header.html
+++ b/myapp/templates/header.html
@@ -15,6 +15,8 @@ http://www.templatemo.com/tm-409-travel
         <meta name="viewport" content="width=device-width">
 		<meta name="author" content="templatemo">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,700,600,300' rel='stylesheet' type='text/css'>
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
         
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/font-awesome.css' %}">
@@ -138,7 +140,7 @@ http://www.templatemo.com/tm-409-travel
         </div> <!-- /.site-footer -->
 
         <script src="{% static 'js/vendor/jquery-1.11.0.min.js' %}"></script>
-        <script>window.jQuery || document.write('<script src="{% static 'js/vendor/jquery-1.11.0.min.js' %}"></script>')</script>
+        <script>window.jQuery || document.write('<script src="{% static 'js/vendor/jquery-min.js' %}"></script>')</script>
         <script src="{% static 'js/bootstrap.js' %}"></script>
         <script src="{% static 'js/plugins.js' %}"></script>
         <script src="{% static 'js/main.js' %}"></script>
