--- a/myapp/templates/hotels2.html
+++ b/myapp/templates/hotels2.html
@@ -195,17 +195,17 @@ img {
                             <span class="fa fa-star"></span>
                             <span class="fa fa-star"></span>
                         </div>
-                        <span class="review-no">41 reviews</span>
+                        <span class="review-no"> Reviews</span>
                     </div>
                     <p class="product-description">{{vid.add_details}}</p>
-                    <h4 class="price">current price: <span>$180</span></h4>
+                    <h4 class="price">current price: <span></span></h4>
                     <p class="vote"><strong></strong>{{vid.hotel_adderss}}<strong></strong></p>
                     <h5 class="sizes">Country:{{vid.hotel_country}}
                         
                     </h5>
                     
                     <div class="action">
-                        <button class="add-to-cart btn btn-default" type="button">Book Now</button>
+                        <button class="btn-success" type="button">Book Now</button>
                         
                     </div>
                 </div>
