--- a/myapp/templates/header.html
+++ b/myapp/templates/header.html
@@ -47,7 +47,7 @@ http://www.templatemo.com/tm-409-travel
                                 <ul class="visible-lg visible-md">
                                     <li class="active"><a href="index.html">Home</a></li>
                                     <li><a href="{% url 'view-hotel' %}">Hotel</a></li>
-                                    <li><a href="{% url 'services' %}">Services</a></li>
+                                    <li><a href="{% url 'hotels2' %}">Hotels</a></li>
                                     <li><a href="{% url 'about' %}">About Us</a></li>
                                     {% if request.session.email %}
                                     <li><a href="{% url 'profile' %}">Profile</a></li>
@@ -69,7 +69,7 @@ http://www.templatemo.com/tm-409-travel
                         <div class="menu-responsive">
                             <ul>
                                 <li class="active"><a href="index.html">Home</a></li>
-                                <li><a href="services.html">Services</a></li>
+                                <li><a href="hotels2.html">Hotels</a></li>
                                 <li><a href="view-hotel.html">Hotel</a></li>
                                 <li><a href="about.html">About Us</a></li>
                                 <li><a href="profile.html">Profile</a></li>
