--- a/Hotel/templates/add-hotels.html
+++ b/Hotel/templates/add-hotels.html
@@ -53,6 +53,13 @@
               <input type="text" id="input" class="form-control" placeholder="Mobile" name="mobile" value="">
             </div>
           </div>
+          <div class="row">
+            <div class="col-lg-4">
+              <div class="form-group">
+                <label class="form-control-label" for="input-mobile">Price</label>
+                <input type="text" id="input" class="form-control" placeholder="Enter Price" name="price" value="">
+              </div>
+            </div>
           <div class="col-lg-4">
             <div class="form-group">
               <label class="form-control-label" for="input-country">Wifi</label>
@@ -73,7 +80,7 @@
               </select>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-6">
             <div class="form-group">
               <label class="form-control-label" for="input-country">Photos</label>
               <input type="file" id="input-postal-code" class="form-control" placeholder="Photos" name="photos">
