--- a/myapp/templates/hotels2.html
+++ b/myapp/templates/hotels2.html
@@ -198,7 +198,7 @@ img {
                         <span class="review-no"> Reviews</span>
                     </div>
                     <p class="product-description"></p>
-                    <h4 class="price">current price: <span></span></h4>
+                    <h4 class="price">current price: <span>{{vid.hotel_price}}</span></h4>
                     <p class="vote"><strong></strong>{{vid.hotel_adderss}}<strong></strong></p>
                     <h5 class="sizes">Country:{{vid.hotel_country}}
                         
