--- a/Hotel/templates/hotelsheader.html
+++ b/Hotel/templates/hotelsheader.html
@@ -253,18 +253,18 @@
                   <i class="ni ni-single-02"></i>
                   <span>hotelsprofile</span>
                 </a>
-                <a href="#!" class="dropdown-item">
+                <!-- <a href="#!" class="dropdown-item">
                   <i class="ni ni-settings-gear-65"></i>
                   <span>Settings</span>
-                </a>
-                <a href="#!" class="dropdown-item">
+                </a> -->
+                <!-- <a href="#!" class="dropdown-item">
                   <i class="ni ni-calendar-grid-58"></i>
                   <span>Activity</span>
-                </a>
-                <a href="#!" class="dropdown-item">
+                </a> -->
+                <!-- <a href="#!" class="dropdown-item">
                   <i class="ni ni-support-16"></i>
                   <span>Support</span>
-                </a>
+                </a> -->
                 <div class="dropdown-divider"></div>
                 <a href="{% url 'hotelslogout' %}" class="dropdown-item">
                   <i class="ni ni-user-run"></i>
