--- a/Hotel/templates/hotelsprofile.html
+++ b/Hotel/templates/hotelsprofile.html
@@ -36,8 +36,8 @@
             </div>
             <div class="card-header text-center border-0 pt-8 pt-md-4 pb-0 pb-md-4">
               <div class="d-flex justify-content-between">
-                <a href="#" class="btn btn-sm btn-info  mr-4 ">Connect</a>
-                <a href="#" class="btn btn-sm btn-default float-right">Message</a>
+                <!-- <a href="#" class="btn btn-sm btn-info  mr-4 ">Connect</a>
+                <a href="#" class="btn btn-sm btn-default float-right">Message</a> -->
               </div>
             </div>
             <div class="card-body pt-0">
@@ -72,9 +72,9 @@
                 <div class="col-8">
                   <h3 class="mb-0">Edit profile </h3>
                 </div>
-                <div class="col-4 text-right">
+                <!-- <div class="col-4 text-right">
                   <a href="#!" class="btn btn-sm btn-primary">Settings</a>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="card-body">
