--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -61,9 +61,10 @@
 
         
         <div class="container">
-            <div class="row" style="background-color: red;">
+            <div class="row" style="background-color: rgb(29, 18, 18);">
                 {% for vid in hotel %}
-                <div class="our-listing owl-carousel" style="width: 100%;">
+                
+                <div  class="col-md-6">
                     <div class="list-item">
                         <div class="list-thumb">
                             <div class="title">
